# mathlibs

./: .gitignore  CITATION.cff  CMakeLists.txt  FindMathlibs.cmake  README.md
libs/: geo_algos.h  geo_conts.h  graph_algos.h  graph_conts.h  helpers.h  math_algos.h  math_conts.h  matrix_algos.h  matrix_concepts.h  matrix_conts.h  phys_algos.h  poly_algos.h  str_algos.h  tensor.h  tensor_dyn.h  tensor_stat.h  variadic_algos.h
tests/: closest.cpp  det.cpp  hash.cpp  intersect.cpp  matrix.cpp  phys.cpp  print.cpp  quat.cpp  recursion.cpp  tensor.cpp  triag.cpp  vec.cpp
unittests/: matrix.cpp  matrix1.cpp  rotation.cpp  seq.cpp  tensor.cpp
